<resources>
    <string name="app_name">SudokuSolver</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select Image</string>
    <string name="history">Previous Puzzles</string>
    <string name="solve">Start Solving</string>
    <string name="back">Go back</string>
    <string name="loadedimage">Loaded Image</string>
    <string name="correctthis">Is this correct?</string>
    <string name="showImage">Show Image</string>
    <string name="hideImage">"Hide Image   "</string>
    <string name="correctThisSpotlight">Type inside of this Sudoku Board to correct our parsed values.</string>
    <string name="solvePuzzle">Solve Puzzle!</string>
    <string name="clear">Clear All</string>
    <string name="loadingText">Waiting for Image...</string>
    <string name="aboutApp" >App written by Evan Burgess and Robert Clarke during November, 2019. This app is designed to allow you to scan a Sudoku puzzle in to the app and allow the app to solve the problem for you. After solving a puzzle you can view it again by clicking the card in the Previous Puzzles tab</string>
    <string name="home">Home</string>
    <string name="solvenav">Solve</string>
</resources>
