<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SolveActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/solveContainer"
            android:layout_width="match_parent"
            android:paddingBottom="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/loader"
                style="@style/SpinKitView.Large.Pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:SpinKit_Color="#000000" />

            <TextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loader"
                android:layout_centerInParent="true"
                android:text="@string/loadingText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:id="@+id/parseContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:onClick="onImageClick"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/showImageText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/showImage"
                                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                android:textColor="#000000" />

                            <TextView
                                android:id="@+id/chevron"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentEnd="true"
                                android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                                android:text="" />
                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/providedImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/editContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/inputBoardContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/correctthis"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="#000000" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/solvePuzzleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/button_shape"
                    android:onClick="solvePuzzle"
                    android:text="@string/solvePuzzle"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFFFFF"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>